--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@hookform/resolvers": "^3.3.4",
     "@mui/icons-material": "^5.15.6",
     "@mui/material": "^5.15.6",
+    "@reduxjs/toolkit": "^2.1.0",
     "axios": "^1.6.7",
     "json-server": "^1.0.0-alpha.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.0",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
     "yup": "^1.3.3"
   },
